[package]
name = "callisto"
version = "0.1.0"
edition = "2021"
authors = ["Jane Lewis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = "0.8"
sdl2 = "0.35"
clap = { version = "4", features = ["derive"]}

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
luau = ["mlua/luau"]
default = ["luajit"]
